--- a/.github/workflows/myfirst.yml
+++ b/.github/workflows/myfirst.yml
@@ -1,10 +1,10 @@
 name: First Workflow
 on: workflow_dispatch
-Jobs: 
+jobs: 
   first-job:
     runs-on: ubuntu-latest
     steps:
-      -  name: Print greeting
-         run: echo "Hello"
-      -  name: Print goodbye
-         run: echo "Bye"
+      - name: Print greeting
+        run: echo "Hello"
+      - name: Print goodbye
+        run: echo "Bye"
